--- a/1.mérföldkő/Sites/bejelentkezes.html
+++ b/1.mérföldkő/Sites/bejelentkezes.html
@@ -18,9 +18,11 @@
 <body>
   <nav class="topnav">
     <ul>
-      <li>
-        <p class="logo">ToDo APP</p>
-        <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="" style="width: 2rem;"></button>
+      <li id="logo">
+        <a href="../Sites/index.html" id="lgo">ToDo APP</a>
+        <!--<a class="ham" href="../Sites/index.html">
+          <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
+        </a>-->
       </li>
     </ul>
     <ul>
