--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -21,11 +21,11 @@
   <body>
     <nav class="topnav">
       <ul>
-        <li>
-          <p class="logo">ToDo APP</p>
-          <button class="ham" id="myBtn">
+        <li id="logo">
+          <a href="../Sites/index.html" id="lgo">ToDo APP</a>
+          <!--<a class="ham" href="../Sites/index.html">
             <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-          </button>
+          </a>-->
         </li>
       </ul>
       <ul>
