--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="Szegedi Bence, Tukacs Patrik" />
-    <link rel="icon" type="image/x-icon" href="../Képek/pipa%20favicon.ico" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="author" content="Szegedi Bence, Tukacs Patrik" >
+    <link rel="icon" type="image/x-icon" href="../Képek/pipa%20favicon.ico" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    >
     <title>ToDo App</title>
-    <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/nav.css" />
-    <link rel="stylesheet" href="../Styles/cards.css" />
-    <link rel="stylesheet" href="../Styles/hero.css" />
-    <link rel="stylesheet" href="../Styles/footer.css" />
+    <link rel="stylesheet" href="../Styles/style.css" >
+    <link rel="stylesheet" href="../Styles/nav.css" >
+    <link rel="stylesheet" href="../Styles/cards.css" >
+    <link rel="stylesheet" href="../Styles/hero.css" >
+    <link rel="stylesheet" href="../Styles/footer.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
 
   <body>
     <nav class="topnav">
       <ul>
-        <p class="logo">ToDo APP</p>
-        <button class="ham" id="myBtn">
-          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
-        </button>
+        <li id="logo">
+          <a href="../Sites/index.html" id="lgo">ToDo APP</a>
+          <!--<a class="ham" href="../Sites/index.html">
+            <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
+          </a>-->
+        </li>
       </ul>
-      <ul id="menu">
+      <ul>
         <li class="active"><a href="../Sites/index.html">Kezdőlap</a></li>
         <li><a href="../Sites/galeria.html">Galéria</a></li>
       </ul>
-      <ul id="menu">
+      <ul>
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
         <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
@@ -48,15 +50,15 @@
     <h2 class="card-title">Főbb feladatai</h2>
     <div id="cards">
       <div class="card">
-        <img src="../képek/bike.jpg" alt="" />
+        <img src="../képek/bike.jpg" alt="" >
         <p>Átlátható heti naptár</p>
       </div>
       <div class="card">
-        <img src="../képek/coffee-gc0ac3039f_1920.jpg" alt="" />
+        <img src="../képek/coffee-gc0ac3039f_1920.jpg" alt="" >
         <p>Jegyzeteket írhatsz a teendők mellé</p>
       </div>
       <div class="card">
-        <img src="../képek/guggolas.jpg" alt="" />
+        <img src="../képek/guggolas.jpg" alt=""/>
         <p>Személyre szabhatod a megjelenítést</p>
       </div>
     </div>
@@ -66,7 +68,7 @@
         src="../Képek/futas2.jpg"
         style="opacity: 0.7; height: 100vh; width: 100%; object-fit: cover"
         alt=""
-      />
+      >
       <div class="text-container">
         <h2>
           Hiszünk abban, hogy ezzel az applikációval motiválni tudunk téged,
