--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -21,24 +21,24 @@
 
   <body>
     <nav class="topnav">
-      <ul>
+      <div>
         <p class="logo">ToDo APP</p>
         <button class="ham" id="myBtn">
-          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+          <img src="../SVG/menu.svg" alt="HamburgerIcon" style="width: 2rem" />
         </button>
-      </ul>
-      <ul id="menu">
+      </div>
+      <ul class="menu">
         <li class="active"><a href="../Sites/index.html">Kezdőlap</a></li>
         <li><a href="../Sites/galeria.html">Galéria</a></li>
       </ul>
-      <ul id="menu">
+      <ul class="menu">
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
         <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
     </nav>
 
     <div class="hero">
-      <img class="hero-image" src="../képek/kavezok.jpg" alt="hello" />
+      <img class="hero-image" src="../képek/kavezok.jpg" alt="Kávézók" />
       <div class="hero-text">
         <h1>Szeretnéd könnybben és átláthatóbban rendezni a teendőidet?</h1>
         <p>A ToDo app segítségével ezt egyszerűen teheted meg.</p>
@@ -48,15 +48,15 @@
     <h2 class="card-title">Főbb feladatai</h2>
     <div id="cards">
       <div class="card">
-        <img src="../képek/bike.jpg" alt="" />
+        <img src="../képek/bike.jpg" alt="Kerékpár" />
         <p>Átlátható heti naptár</p>
       </div>
       <div class="card">
-        <img src="../képek/coffee-gc0ac3039f_1920.jpg" alt="" />
+        <img src="../képek/coffee-gc0ac3039f_1920.jpg" alt="Kávé" />
         <p>Jegyzeteket írhatsz a teendők mellé</p>
       </div>
       <div class="card">
-        <img src="../képek/guggolas.jpg" alt="" />
+        <img src="../képek/guggolas.jpg" alt="Guggolás" />
         <p>Személyre szabhatod a megjelenítést</p>
       </div>
     </div>
@@ -82,7 +82,6 @@
     <footer>
       <p>Made by Tukacs Patrik, Szegedi Bence</p>
     </footer>
-    <script src="../JS/grid.js"></script>
     <script src="../JS/nav.js"></script>
   </body>
 </html>
