--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="author" content="Szegedi Bence, Tukacs Patrik" >
-    <link rel="icon" type="image/x-icon" href="/Képek/pipa%20favicon.ico" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="author" content="Szegedi Bence, Tukacs Patrik" />
+    <link rel="icon" type="image/x-icon" href="/Képek/pipa%20favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    >
+    />
     <title>Galéria</title>
-    <link rel="stylesheet" href="../Styles/style.css" >
-    <link rel="stylesheet" href="../Styles/nav.css" >
-    <link rel="stylesheet" href="../Styles/footer.css" >
-    <link rel="stylesheet" href="../Styles/galeria.css" >
+    <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/nav.css" />
+    <link rel="stylesheet" href="../Styles/footer.css" />
+    <link rel="stylesheet" href="../Styles/galeria.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
 
   <body>
     <nav class="topnav">
-      <ul>
-        <li>
-          <p class="logo">ToDo APP</p>
-          <button class="ham" id="myBtn">
-            <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-          </button>
-        </li>
-      </ul>
-      <ul>
+      <div>
+        <p class="logo">ToDo APP</p>
+        <button class="ham" id="myBtn">
+          <img src="../SVG/menu.svg" alt="HamburgerIcon" style="width: 2rem" />
+        </button>
+      </div>
+      <ul class="menu">
         <li><a href="../Sites/index.html">Kezdőlap</a></li>
         <li class="active"><a href="../Sites/galeria.html">Galéria</a></li>
       </ul>
-      <ul>
+      <ul class="menu">
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
         <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
