--- a/1.mérföldkő/Sites/regisztracio.html
+++ b/1.mérföldkő/Sites/regisztracio.html
@@ -16,17 +16,15 @@
 </head>
 
 <nav class="topnav">
-  <ul>
-    <li>
+  <div>
       <p class="logo">ToDo APP</p>
-      <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="" style="width: 2rem;"></button>
-    </li>
-  </ul>
-  <ul>
+      <button class="ham" id="myBtn"><img src="../SVG/menu.svg" alt="HamburgerIcon" style="width: 2rem;"></button>
+  </div>
+  <ul class="menu">
     <li><a href="../Sites/index.html">Kezdőlap</a></li>
     <li><a href="../Sites/galeria.html">Galéria</a></li>
   </ul>
-  <ul>
+  <ul class="menu">
     <li class="active"><a href="../Sites/regisztracio.html">Regisztráció</a></li>
     <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
   </ul>
