--- a/1.mérföldkő/Sites/feladatszerkeszto.html
+++ b/1.mérföldkő/Sites/feladatszerkeszto.html
@@ -16,15 +16,13 @@
 </head>
 
 <body>
-  <nav class="topnav">
-    <ul>
-      <li id="logo">
-        <a href="../Sites/index.html" id="lgo">ToDo APP</a>
-        <button class="ham" id="myBtn">
-          <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-        </button>
-      </li>
-    </ul>
+    <nav class="topnav">
+        <ul>
+          <p class="logo">ToDo APP</p>
+          <button class="ham" id="myBtn">
+            <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
+          </button>
+        </ul>
     <ul>
       <li><a href="../Sites/index.html">Kezdőlap</a></li>
       <li><a href="../Sites/galeria.html">Galéria</a></li>
