--- a/1.mérföldkő/Sites/regisztracio.html
+++ b/1.mérföldkő/Sites/regisztracio.html
@@ -14,19 +14,18 @@
   <link rel="stylesheet" href="../Styles/footer.css" >
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
-
+<body>
 <nav class="topnav">
   <ul>
-    <li id="logo">
-      <a href="../Sites/index.html" id="lgo">ToDo APP</a>
-      <!--<a class="ham" href="../Sites/index.html">
-        <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-      </a>-->
-    </li>
+    <p class="logo">ToDo APP</p>
+    <button class="ham" id="myBtn">
+      <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+    </button>
   </ul>
   <ul>
     <li><a href="../Sites/index.html">Kezdőlap</a></li>
     <li><a href="../Sites/galeria.html">Galéria</a></li>
+    <li><a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a></li>
   </ul>
   <ul>
     <li class="active"><a href="../Sites/regisztracio.html">Regisztráció</a></li>
