--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -21,16 +21,15 @@
   <body>
     <nav class="topnav">
       <ul>
-        <li id="logo">
-          <a href="../Sites/index.html" id="lgo">ToDo APP</a>
-          <!--<a class="ham" href="../Sites/index.html">
-            <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-          </a>-->
-        </li>
+        <p class="logo">ToDo APP</p>
+        <button class="ham" id="myBtn">
+          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+        </button>
       </ul>
       <ul>
         <li><a href="../Sites/index.html">Kezdőlap</a></li>
         <li class="active"><a href="../Sites/galeria.html">Galéria</a></li>
+        <li><a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a></li>
       </ul>
       <ul>
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
