--- a/1.mérföldkő/Sites/feladatszerkeszto.html
+++ b/1.mérföldkő/Sites/feladatszerkeszto.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Szegedi Bence, Tukacs Patrik" />
+    <link rel="icon" type="image/x-icon" href="/Képek/pipa%20favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Feladatszerkesztő</title>
+    <link rel="stylesheet" href="../Styles/style.css" />
+    <link rel="stylesheet" href="../Styles/feladat.css" />
+    <link rel="stylesheet" href="../Styles/nav.css" />
+    <link rel="stylesheet" href="../Styles/footer.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" >
-  <meta name="author" content="Szegedi Bence, Tukacs Patrik" >
-  <link rel="icon" type="image/x-icon" href="/Képek/pipa%20favicon.ico">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <title>Feladatszerkesztő</title>
-  <link rel="stylesheet" href="../Styles/style.css" >
-  <link rel="stylesheet" href="../Styles/feladat.css" >
-  <link rel="stylesheet" href="../Styles/nav.css" >
-  <link rel="stylesheet" href="../Styles/footer.css" >
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-</head>
-
-<body>
+  <body>
     <nav class="topnav">
-        <ul>
-          <p class="logo">ToDo APP</p>
-          <button class="ham" id="myBtn">
-            <img src="../SVG/menu.svg" alt="" style="width: 2rem" >
-          </button>
-        </ul>
-    <ul>
-      <li><a href="../Sites/index.html">Kezdőlap</a></li>
-      <li><a href="../Sites/galeria.html">Galéria</a></li>
-      <li class="active"><a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a></li>
-    </ul>
-    <ul>
+      <div>
+        <p class="logo">ToDo APP</p>
+        <button class="ham" id="myBtn">
+          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+        </button>
+      </div>
+      <ul class="menu">
+        <li><a href="../Sites/index.html">Kezdőlap</a></li>
+        <li><a href="../Sites/galeria.html">Galéria</a></li>
+        <li class="active">
+          <a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a>
+        </li>
+      </ul>
+      <ul class="menu">
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
         <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
-    </ul>
-  </nav>
-  
-  <main class="bg-img">
-    <div class="hero">
+      </ul>
+    </nav>
+
+    <main class="bg-img">
+      <div class="hero">
         <div class="hero-text">
-            <h1>A feladatszerkesztővel könnyen tudod megtervezni hetedet!</h1>
-            <p>Hozz létre feladatokat, programokat, hogy mindig átlátható legyen a napod.
-                A ToDo app segítségével egyszerűen személyre szabhatod a naptáradat és a teljesített 
-                feladatok után meglepetések várnak.
-            </p>
+          <h1>A feladatszerkesztővel könnyen tudod megtervezni hetedet!</h1>
+          <p>
+            Hozz létre feladatokat, programokat, hogy mindig átlátható legyen a
+            napod. A ToDo app segítségével egyszerűen személyre szabhatod a
+            naptáradat és a teljesített feladatok után meglepetések várnak.
+          </p>
         </div>
-    </div>
-    <img src="../Képek/minta.png" id="kep" alt="Feldattervező" style="width: 80%">
-</main>
+      </div>
+      <img
+        src="../Képek/minta.png"
+        id="kep"
+        alt="Feldattervező"
+        style="width: 80%"
+      />
+    </main>
 
-  <footer>
-    <p>Made by Tukacs Patrik, Szegedi Bence</p>
-  </footer>
+    <footer>
+      <p>Made by Tukacs Patrik, Szegedi Bence</p>
+    </footer>
 
-  
-  <script>
-    
-  </script>
-  <script src="../JS/nav.js"></script>
-</body>
-
+    <script></script>
+    <script src="../JS/nav.js"></script>
+  </body>
 </html>
