--- a/1.mérföldkő/Sites/feladatszerkeszto.html
+++ b/1.mérföldkő/Sites/feladatszerkeszto.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feladatszerkesztő</title>
     <link rel="stylesheet" href="../Styles/style.css" />
-    <link rel="stylesheet" href="../Styles/feladat.css" />
     <link rel="stylesheet" href="../Styles/nav.css" />
+    <link rel="stylesheet" href="../Styles/feladat.css" />
     <link rel="stylesheet" href="../Styles/footer.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
@@ -19,15 +19,13 @@
       <div>
         <p class="logo">ToDo APP</p>
         <button class="ham" id="myBtn">
-          <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
+          <img src="../SVG/menu.svg" alt="HamburgerIcon" style="width: 2rem" />
         </button>
       </div>
       <ul class="menu">
         <li><a href="../Sites/index.html">Kezdőlap</a></li>
         <li><a href="../Sites/galeria.html">Galéria</a></li>
-        <li class="active">
-          <a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a>
-        </li>
+        <li class="active"><a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a></li>
       </ul>
       <ul class="menu">
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
