--- a/1.mérföldkő/Sites/galeria.html
+++ b/1.mérföldkő/Sites/galeria.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="topnav">
       <div>
-        <p class="logo">ToDo APP</p>
+        <a href="../Sites/index.html" class="logo">ToDo APP</a>
         <button class="ham" id="myBtn">
           <img src="../SVG/menu.svg" alt="HamburgerIcon" style="width: 2rem" />
         </button>
