--- a/1.mérföldkő/Sites/index.html
+++ b/1.mérföldkő/Sites/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="topnav">
       <div>
-        <p class="logo">ToDo APP</p>
+        <a href="../Sites/index.html" class="logo">ToDo APP</a>
         <button class="ham" id="myBtn">
           <img src="../SVG/menu.svg" alt="" style="width: 2rem" />
         </button>
@@ -32,7 +32,7 @@
         <li><a href="../Sites/galeria.html">Galéria</a></li>
         <li><a href="../Sites/feladatszerkeszto.html">Feladatszerkesztő</a></li>
       </ul>
-      <ul>
+      <ul class="menu">
         <li><a href="../Sites/regisztracio.html">Regisztráció</a></li>
         <li><a href="../Sites/bejelentkezes.html">Bejelentkezés</a></li>
       </ul>
