--- a/1.mérföldkő/Sites/feladatszerkeszto.html
+++ b/1.mérföldkő/Sites/feladatszerkeszto.html
@@ -37,18 +37,22 @@
       <div class="hero">
         <div class="hero-text">
           <h1>A feladatszerkesztővel könnyen tudod megtervezni hetedet!</h1>
-          <p>
-            Hozz létre feladatokat, programokat, hogy mindig átlátható legyen a
-            napod. A ToDo app segítségével egyszerűen személyre szabhatod a
-            naptáradat és a teljesített feladatok után meglepetések várnak.
-          </p>
+          <ul>
+            <li>
+              Hozz létre feladatokat, programokat, hogy mindig átlátható legyen a
+              napod.
+            </li><br>
+            <li>A ToDo app segítségével egyszerűen személyre szabhatod a
+              naptáradat és a teljesített feladatok után meglepetések várnak.
+            </li> <br>
+          </ul>
         </div>
       </div>
       <img
         src="../Képek/minta.png"
         id="kep"
         alt="Feldattervező"
-        style="width: 80%"
+        style="width: 85%"
       />
     </main>
 
